# Comunik

./: .gitignore  Cargo.toml  README.md  app.db  charte_de_couleur.txt  structure.txt  svg.txt
db/: init.sql  modif01.sql  table.isl
doc/: Looping1.lo1  Looping1.loo  comunik_MLD.sql  comunik_MLD.txt  exemple_envoi_messages.rs  init.txt  structure.txt  svg.txt
src/: connection_manager.rs  gestion_log.rs  handlers.rs  main.rs  models.rs  sql_req.rs  tools.rs  ws.rs  ws_init.rs
static/: index.html
static/css/: access.css  bg_canvas.css  header.css  home.css  messages.css  profile.css  style_for_all.css
static/js/: hack_er.js
templates/: access.html  home.html  login.html  profile.html  register.html
templates/admin/: online_users.html
